updated 404.html, index.html, index.html

--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
         </ul>
       </div>
       
-      <a href="/files/Akshat_D_Patel_Resume.pdf" title="My resume" target="#"
+      <a href="https://umd.box.com/s/t59mx4owi4dcltm1aj8t7bts8qi697ct" title="My resume" target="#"
         ><button class="btn btn-dark">My resume</button></a
       >
       
